# advent-of-code-2024

./: pyproject.toml
01/: hysteria.py  hysteria2.py
02/: level.py  level2.py
03/: mul.py  mul2.py
04/: xmas.py  xmas2.py
05/: queue.py  queue2.py
06/: guard.py  guard2.py
07/: bridge.py  bridge2.py
08/: antenna.py  antenna2.py
09/: fragment.py  fragment2.py
10/: trail.py  trail2.py
11/: stone.py
12/: groups.py  groups2.py
13/: button.py  button2.py
14/: robot.py  robot2.py
15/: box.py  box2.py
16/: race.py  race2.py
17/: program.py  program2.py
18/: maze.py  maze2.py
19/: towel.py  towel2.py
20/: cheat.py  cheat2.py
